# arbo-sandbox

./: Cargo.toml  README.md  go.mod  go.sum  main.go  main_test.go  merkleproof.json
.github/workflows/: main.yml
elf/: riscv32im-succinct-zkvm-elf
lib/: Cargo.toml
lib/src/: lib.rs  poseidon.rs  smtverifier.rs
program/: Cargo.toml
program/src/: main.rs
script/: Cargo.toml
src/: main.rs
