[package]
name = "smtverifier"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy-sol-types.workspace = true
num-bigint = "0.4.6"
num-traits = "0.2.19"
serde = "1.0.210"
blake3 = "1.5.4"
hex = "0.4"
poseidon-ark = { git = "https://github.com/arnaucube/poseidon-ark" }
ark-ff = "0.4.0"
ark-bn254 = { version = "0.4.0" }
ark-std = { version = "0.4.0" }

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
num-bigint =  { version = "0.4.6", features = ["serde"] }
