[package]
name = "arbo-sandbox"
version = "0.1.0"
edition = "2021"

[dependencies]
ark-bn254 = "0.4.0"
ark-ff = "0.4.2"
ark-std = "0.4.0"
poseidon-ark = { git = "https://github.com/arnaucube/poseidon-ark" }
num-bigint = { version = "0.4.6", features = ["serde"] }
num-traits = "0.2.19"
ark-serialize = "0.4.2"
sp1-zkvm = "2.0.0"
blake3 = "1.5.4"
arbo-lib = { path = "../lib" }
