[package]
version = "0.1.0"
name = "arbo-sandbox-script"
edition = "2021"
default-run = "arbo"

[[bin]]
name = "arbo"
path = "src/bin/main.rs"

[[bin]]
name = "evm"
path = "src/bin/evm.rs"

[dependencies]
sp1-sdk = "2.0.0"
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
clap = { version = "4.0", features = ["derive", "env"] }
tracing = "0.1.40"
hex = "0.4.3"
alloy-sol-types = { workspace = true }
arbo-sandbox-lib = { path = "../lib" }
num-bigint = { version = "0.4.6", features = ["serde"] }
ruint = "1.12.3"

[build-dependencies]
sp1-helper = "2.0.0"
